--- a/package.json
+++ b/package.json
@@ -6,19 +6,52 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --env=jsdom --verbose"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "jsxSingleQuote": true,
+    "trailingComma": "none"
   },
   "dependencies": {
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "axios": "^0.21.1",
+    "msw": "^0.35.0",
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.29.2",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "18.7.2",
-    "@types/react": "18.0.17",
+    "@types/node-fetch": "^2.6.2",
+    "@types/react": "^18.0.1",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
+    "babel-jest": "^26.6.3",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
+    "jest": "^26.6.3",
+    "jest-css-modules": "^2.1.0",
+    "next-page-tester": "^0.30.0",
+    "postcss": "^8.4.16",
+    "prettier": "2.7.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/.next/",
+      "<rootDir>/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/node_modules/jest-css-modules"
+    }
   }
 }
