--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
       "<rootDir>/node_modules/"
     ],
     "moduleNameMapper": {
-      "\\.(css)$": "<rootDir>/node_modules/jest-css-modules"
+      "\\.(css)$": "<rootDir>/node_modules/jest-css-modules",
+      "src(.*)$": "<rootDir>/src/$1"
     }
   }
 }
